--- a/index.html
+++ b/index.html
@@ -5,5 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-js-hw-02 ödevi - saim durmuşoğlu</title>
   </head>
-  <body></body>
+  <body>
+    <h1>goit-js-hw-02 ödevi</h1>
+    <h2>Saim Durmuşoğlu</h2>
+
+    <!-- js script load -->
+    <script src="./js/task-1.js"></script>
+    <script src="./js/task-2.js"></script>
+    <script src="./js/task-3.js"></script>
+    <script src="./js/task-4.js"></script>
+  </body>
 </html>
